fix(css): set overflow-x scroll for pre element

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ code {
 pre {
   padding: .5rem 1rem;
   border-left: .2rem solid #ddd;
+  overflow-x: scroll;
 }
 
 img {
